add portfolio links

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div class="project">
               <h2>Portfolio</h2>
               <div class="links">
-                <p onclick="window.open('https://github.com/chen10an')">repo</p>
-                <p onclick="window.open('https://github.com/chen10an')">demo</p>
+                <p onclick="window.open('https://github.com/chen10an/chen10an.github.io')">repo</p>
+                <p onclick="window.open('https://chen10an.github.io')">demo</p>
               </div>
             </div>
           </div>
