add resume and small modifications to nav

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>
             I like exploring machine learning problems and building apps.
             At my <span class="underline" onclick="window.open('http://www.telenor.com')">Telenor</span> internship, I worked on a customer response prediction model for an unbalanced dataset.
-            At <span class="underline" onclick="window.open('https://www.pauca.io')">Venn</span>, I work on front-end app development in Swift.
+            At <span class="underline" onclick="window.open('https://www.pauca.io')">Pauca</span>, I work on front-end app development in Swift.
             I am interested in learning more about deep learning and biologically inspired computing.
           </p>
           <br>
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div class="project">
-              <h2>Portfolio</h2>
+              <h2>This Portfolio</h2>
               <div class="links">
                 <p onclick="window.open('https://github.com/chen10an/chen10an.github.io')">repo</p>
                 <p onclick="window.open('https://chen10an.github.io')">demo</p>
@@ -101,11 +101,11 @@
             <h2>home</h2>
             <h2>about</h2>
             <h2>projects</h2>
-            <h2>resume</h2>
+            <h2 onclick="window.open('Chentian%20Jiang.pdf')">resume</h2>
           </div>
           <footer>
             <div class="icons">
-              <i class="icon-linkedin" onclick="window.open('https://www.linkedin.com/in/chentian-jiang-2054a5134/')"></i>
+              <i class="icon-linkedin" onclick="window.open('https://www.linkedin.com/in/chentianj')"></i>
               <i class="icon-github" onclick="window.open('https://github.com/chen10an')"></i>
               <i class="icon-email" onclick="window.open('mailto:chentian.jiang@duke.edu')"></i>
             </div>
