--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </p>
           <br>
           <p>
-            If you'd like to get in touch with me, you can reach me at <span class="underline" onclick="window.open('mailto:chentian.jiang@duke.edu')">chentian.jiang@duke.edu</span> :)
+            If you'd like to get in touch with me, you can reach me at <span class="underline" onclick="window.open('mailto:chentian.jiang@duke.edu')">chentian.jiang@duke.edu</span>.
           </p>
         </div>
 
