--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="project">
-              <h2>Recommender System for Github Repos</h2>
+              <h2>Recommendation System for Github Repositories</h2>
               <div class="links">
                 <p onclick="window.open('https://github.com/chen10an/repo_recommender')">repo</p>
               </div>
