--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>
             I like exploring machine learning problems and building apps.
             At my <span class="underline" onclick="window.open('http://www.telenor.com')">Telenor</span> internship, I worked on a customer response prediction model for an unbalanced dataset.
-            At <span class="underline" onclick="window.open('https://www.pauca.io')">Pauca</span>, I worked on front-end app development in Swift.
+            At <span class="underline" onclick="window.open('https://www.pauca.io')">Pauca</span>, I work on front-end app development in Swift.
             I am interested in learning more about deep learning and biologically inspired computing.
           </p>
           <br>
